upd: Авторизация, регистрация, создание и удаление статей

--- a/src/pages/AddPost/AddPost.module.scss
+++ b/src/pages/AddPost/AddPost.module.scss
@@ -13,6 +13,7 @@
 }
 
 .image {
+  margin-top: 15px;
   width: 100%;
 }
 
@@ -41,4 +42,8 @@
   button {
     margin-right: 15px;
   }
+}
+
+.button_delete {
+  margin-left: 15px;
 }
